kubernetes-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deklaracii-finki-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: deklaracii-finki-app
  template:
    metadata:
      labels:
        app: deklaracii-finki-app
    spec:
      containers:
        - name: deklaracii-finki-app
          image: deklaracii-finki-app:latest
          ports:
            - containerPort: 8090
          volumeMounts:
            - name: h2-data
              mountPath: /data/h2
      volumes:
        - name: h2-data
