Service.yml
apiVersion: v1
kind: Service
metadata:
  name: deklaracii-finki-service
spec:
  selector:
    app: deklaracii-finki-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: NodePort
