h2-database-service.yml
apiVersion: v1
kind: Service
metadata:
  name: h2-database-service
spec:
  selector:
    app: deklaracii-finki-app-1
  ports:
    - protocol: TCP
      port: 1521
